# rocket-identity

./: .gitignore  Cargo.toml  README.md  deny.toml
.config/: nextest.toml
.github/workflows/: rust.yml
examples/: readme.rs
src/: jwt.rs  keys.rs  lib.rs  oauth2.rs  scope.rs  secret.rs  tests.rs
src/tokens/: ecdsa_alg.rs  hmac_alg.rs  mod.rs  rsassa_pkcs1_v15_alg.rs  rsassa_pss_alg.rs  rsatestkey.pem
test_thing/: Cargo.toml
test_thing/benches/: benchmarks.rs
test_thing/src/: lib.rs  main.rs
