[package]
name = "test_thing"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
rocket = { version = "0.5.1", features = ["json"] }
rocket-identity = { version = "0.1.0", path = "..", features = ["hs256", "rs256", "es256"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rsa = { version = "0.9", features = ["pem"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
